// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check ArticleList renders correctly when Component isLoading 1`] = `
<div
  className="md:w-2/5 md:max-h-full m-10"
>
  <div>
    <h2
      className="text-lg font-semibold mb-4"
    >
       Article List 
    </h2>
    <span
      aria-busy={true}
      aria-live="polite"
    >
      <span
        className="react-loading-skeleton border rounded-lg p-4 hover:border-blue-500 flex-1 items-center bg-gray-200 mb-2 h-20 w-full"
        style={Object {}}
      >
        ‌
      </span>
      <br />
      <span
        className="react-loading-skeleton border rounded-lg p-4 hover:border-blue-500 flex-1 items-center bg-gray-200 mb-2 h-20 w-full"
        style={Object {}}
      >
        ‌
      </span>
      <br />
      <span
        className="react-loading-skeleton border rounded-lg p-4 hover:border-blue-500 flex-1 items-center bg-gray-200 mb-2 h-20 w-full"
        style={Object {}}
      >
        ‌
      </span>
      <br />
      <span
        className="react-loading-skeleton border rounded-lg p-4 hover:border-blue-500 flex-1 items-center bg-gray-200 mb-2 h-20 w-full"
        style={Object {}}
      >
        ‌
      </span>
      <br />
      <span
        className="react-loading-skeleton border rounded-lg p-4 hover:border-blue-500 flex-1 items-center bg-gray-200 mb-2 h-20 w-full"
        style={Object {}}
      >
        ‌
      </span>
      <br />
      <span
        className="react-loading-skeleton border rounded-lg p-4 hover:border-blue-500 flex-1 items-center bg-gray-200 mb-2 h-20 w-full"
        style={Object {}}
      >
        ‌
      </span>
      <br />
      <span
        className="react-loading-skeleton border rounded-lg p-4 hover:border-blue-500 flex-1 items-center bg-gray-200 mb-2 h-20 w-full"
        style={Object {}}
      >
        ‌
      </span>
      <br />
      <span
        className="react-loading-skeleton border rounded-lg p-4 hover:border-blue-500 flex-1 items-center bg-gray-200 mb-2 h-20 w-full"
        style={Object {}}
      >
        ‌
      </span>
      <br />
      <span
        className="react-loading-skeleton border rounded-lg p-4 hover:border-blue-500 flex-1 items-center bg-gray-200 mb-2 h-20 w-full"
        style={Object {}}
      >
        ‌
      </span>
      <br />
      <span
        className="react-loading-skeleton border rounded-lg p-4 hover:border-blue-500 flex-1 items-center bg-gray-200 mb-2 h-20 w-full"
        style={Object {}}
      >
        ‌
      </span>
      <br />
    </span>
  </div>
</div>
`;

exports[`check ArticleList renders correctly when articles are passed 1`] = `
<div
  className="md:w-2/5 md:max-h-full m-10"
>
  <div>
    <h2
      className="text-lg font-semibold mb-4"
    >
       Article List 
    </h2>
    <button
      className="list-card border rounded-lg p-4 hover:border-blue-500 flex items-center bg-gray-200 mb-2 h-20 w-full"
      data-testid="list-card"
      onClick={[Function]}
    >
      <div
        className="mr-4 flex-shrink-0"
      >
        <img
          alt="My Daughter Is Having Sex With Her Best Friend. Must I Tell Her Mom?"
          className="w-20 h-20 object-cover"
          src="https://static01.nyt.com/images/2022/03/27/magazine/27mag-ethicist/27mag-ethicist-thumbStandard.jpg"
        />
      </div>
      <div>
        <p
          className="font-semibold line-clamp-2"
        >
          My Daughter Is Having Sex With Her Best Friend. Must I Tell Her Mom?
        </p>
        <div
          className="text-sm text-gray-500"
        >
          <p
            data-testid="date"
          >
            22 Mar 2022
          </p>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`check ArticleList renders correctly when no articles passed 1`] = `
<div
  className="md:w-2/5 md:max-h-full m-10"
>
  <div>
    <h2
      className="text-lg font-semibold mb-4"
    >
       Article List 
    </h2>
  </div>
</div>
`;
